Add a missing comma on line 32

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <script type="application/ld+json">
     {
-      "@context": "https://schema.org"
+      "@context": "https://schema.org",
       "@type": "Website",
       "name": "Dinos ’R’ Us",
       "author": {
